--- a/index.html
+++ b/index.html
@@ -598,18 +598,30 @@
         z-index: 10; /* Ensure it's on top of other content */
     }
     .main-links a {
-        /* ... other properties ... */
-        padding: 0.5em 0; /* Keep your existing padding */
-        border-radius: 0;
-        border: 1px solid transparent; /* ADDED: Small transparent border */
-        margin: 0;
-        /* ... other background properties ... */
-        background-size: 250% 150%; /* INCREASE THESE VALUES (e.g., 250% width, 150% height) */
-        background-position: center;
-        background-origin: border-box;
-        background-clip: border-box;
-        /* ... other properties ... */
-    }
+    font-size: 1rem;
+    color: #181818;
+    text-decoration: none;
+    opacity: 0.90;
+    transition: color 0.18s, opacity 0.18s, --button-fill-color 0.18s;
+    font-weight: normal;
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+    box-sizing: border-box;
+    padding: 12px 80px;
+    border-radius: 0;
+    border: 2px solid transparent;
+    margin: 0 0.1em;
+    --button-fill-color: #fff;
+    background-color: transparent;
+    background-image: url('./images/pixel-border.svg');
+    background-repeat: no-repeat;
+    background-size: 100% 150%;
+    background-origin: border-box;
+    background-clip: border-box;
+    /* ADD THIS LINE FOR DESKTOP */
+    background-position: center; /* THIS WILL CENTER THE OVAL OUTLINE ON DESKTOP */
+}
     .nav-hero-separator, .banner-hero-separator {
         width: 98vw;
         min-width: 0;
