--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
         flex-direction: column; /* Stack nav items vertically */
         align-items: flex-start; /* Align nav items to the left */
         gap: 8px;
-        width: auto; /* Let width adjust to content */
+        width: 100%; /* Let width adjust to content */
         margin: 0; /* REMOVED: Old margins, not needed with absolute positioning */
         padding: 0; /* REMOVED: Old padding */
         z-index: 10; /* Ensure it's on top of other content */
@@ -616,7 +616,7 @@
     background-color: transparent;
     background-image: url('./images/pixel-border.svg');
     background-repeat: no-repeat;
-    background-size: 100% 150%;
+    background-size: 100% 110%;
     background-origin: border-box;
     background-clip: border-box;
     /* ADD THIS LINE FOR DESKTOP */
