--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
         left: 2vw; /* Align with the left edge of the header's padding */
         display: flex;
         flex-direction: column; /* Stack nav items vertically */
-        align-items: flex-start; /* Align nav items to the left */
+        align-items: center; /* Align nav items to the left */
         gap: 8px;
         width: 100%; /* Let width adjust to content */
         margin: 0; /* REMOVED: Old margins, not needed with absolute positioning */
@@ -616,7 +616,7 @@
     background-color: transparent;
     background-image: url('./images/pixel-border.svg');
     background-repeat: no-repeat;
-    background-size: 100% 110%;
+    background-size: 100% 105%;
     background-origin: border-box;
     background-clip: border-box;
     /* ADD THIS LINE FOR DESKTOP */
