--- a/index.html
+++ b/index.html
@@ -584,44 +584,35 @@
     }
 
     /* IMPORTANT: Changes for .main-links to move it */
-    .main-links {
-        position: absolute; /* ADDED: Breaks it from normal flow */
-        top: 200px; /* ADJUST THIS VALUE: Place it below the logo (logo height 160px + some space) */
-        left: 2vw; /* Align with the left edge of the header's padding */
-        display: flex;
-        flex-direction: column; /* Stack nav items vertically */
-        align-items: center; /* Align nav items to the left */
-        gap: 8px;
-        width: 100%; /* Let width adjust to content */
+    8px;
+        width: auto; /* Let width adjust to content */
         margin: 0; /* REMOVED: Old margins, not needed with absolute positioning */
         padding: 0; /* REMOVED: Old padding */
         z-index: 10; /* Ensure it's on top of other content */
     }
     .main-links a {
-    font-size: 1rem;
-    color: #181818;
-    text-decoration: none;
-    opacity: 0.90;
-    transition: color 0.18s, opacity 0.18s, --button-fill-color 0.18s;
-    font-weight: normal;
-    display: flex;
-    align-items: center;
-    gap: 0.5em;
-    box-sizing: border-box;
-    padding: 12px 80px;
-    border-radius: 0;
-    border: 2px solid transparent;
-    margin: 0 0.1em;
-    --button-fill-color: #fff;
-    background-color: transparent;
-    background-image: url('./images/pixel-border.svg');
-    background-repeat: no-repeat;
-    background-size: 100% 105%;
-    background-origin: border-box;
-    background-clip: border-box;
-    /* ADD THIS LINE FOR DESKTOP */
-    background-position: center; /* THIS WILL CENTER THE OVAL OUTLINE ON DESKTOP */
-}
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 8px; /* Optional: Adds space between the icon and text */
+
+        font-size: 0.95rem;
+        width: 120%; /* Keep this if you want fixed-width buttons */
+        padding: 0.5em 0;
+        border-radius: 20px;
+        margin: 0;
+        text-decoration: none;
+        color: inherit;
+
+        /* ADD/CONFIRM THESE FOR THE PIXELATED OVAL BACKGROUND */
+        background-image: url('./images/pixel-border.svg'); /* Ensure the correct path */
+        background-repeat: no-repeat;
+        background-size: 200% 150%; /* Make sure it's applied for mobile */
+        background-position: center; /* THIS WILL CENTER THE OVAL OUTLINE */
+        background-origin: border-box; /* Good practice to include */
+        background-clip: border-box; /* Good practice to include */
+    }
+
     .nav-hero-separator, .banner-hero-separator {
         width: 98vw;
         min-width: 0;
