--- a/index.html
+++ b/index.html
@@ -584,35 +584,32 @@
     }
 
     /* IMPORTANT: Changes for .main-links to move it */
-    8px;
+    .main-links {
+        position: absolute; /* ADDED: Breaks it from normal flow */
+        top: 200px; /* ADJUST THIS VALUE: Place it below the logo (logo height 160px + some space) */
+        left: 2vw; /* Align with the left edge of the header's padding */
+        display: flex;
+        flex-direction: column; /* Stack nav items vertically */
+        align-items: flex-start; /* Align nav items to the left */
+        gap: 8px;
         width: auto; /* Let width adjust to content */
         margin: 0; /* REMOVED: Old margins, not needed with absolute positioning */
         padding: 0; /* REMOVED: Old padding */
         z-index: 10; /* Ensure it's on top of other content */
     }
     .main-links a {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 8px; /* Optional: Adds space between the icon and text */
-
-        font-size: 0.95rem;
-        width: 120%; /* Keep this if you want fixed-width buttons */
-        padding: 0.5em 0;
-        border-radius: 20px;
+        /* ... other properties ... */
+        padding: 0.5em 0; /* Keep your existing padding */
+        border-radius: 0;
+        border: 1px solid transparent; /* ADDED: Small transparent border */
         margin: 0;
-        text-decoration: none;
-        color: inherit;
-
-        /* ADD/CONFIRM THESE FOR THE PIXELATED OVAL BACKGROUND */
-        background-image: url('./images/pixel-border.svg'); /* Ensure the correct path */
-        background-repeat: no-repeat;
-        background-size: 200% 150%; /* Make sure it's applied for mobile */
-        background-position: center; /* THIS WILL CENTER THE OVAL OUTLINE */
-        background-origin: border-box; /* Good practice to include */
-        background-clip: border-box; /* Good practice to include */
+        /* ... other background properties ... */
+        background-size: 250% 150%; /* INCREASE THESE VALUES (e.g., 250% width, 150% height) */
+        background-position: center;
+        background-origin: border-box;
+        background-clip: border-box;
+        /* ... other properties ... */
     }
-
     .nav-hero-separator, .banner-hero-separator {
         width: 98vw;
         min-width: 0;
