--- a/index.html
+++ b/index.html
@@ -600,11 +600,11 @@
     .main-links a {
         /* ... other properties ... */
         padding: 0.5em 0; /* Keep your existing padding */
-        border-radius: 0;
+        border-radius: 20px;
         border: 1px solid transparent; /* ADDED: Small transparent border */
         margin: 0;
         /* ... other background properties ... */
-        background-size: 250% 150%; /* INCREASE THESE VALUES (e.g., 250% width, 150% height) */
+        background-size: 100% 105%; /* INCREASE THESE VALUES (e.g., 250% width, 150% height) */
         background-position: center;
         background-origin: border-box;
         background-clip: border-box;
