--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
     .main-links a {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         gap: 8px; /* Optional: Adds space between the icon and text */
 
         font-size: 0.95rem;
