--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
         background-image: url('./images/pixel-border.svg'); /* Ensure the correct path */
         background-repeat: no-repeat;
         background-size: 100% 200%; /* Make sure it's applied for mobile */
-        background-position: flex-start; /* THIS WILL CENTER THE OVAL OUTLINE */
+        background-position: center; /* THIS WILL CENTER THE OVAL OUTLINE */
         background-origin: border-box; /* Good practice to include */
         background-clip: border-box; /* Good practice to include */
     }
