--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
         }
         .main-links a {
             font-size: 1rem;
-            color: #181818; /* Default text color: Black */
+            color: #000; /* CHANGED: Set default text color to pure black */
             text-decoration: none;
             opacity: 0.90;
             font-weight: normal;
             display: flex; 
             align-items: center;
-            justify-content: flex-start; /* REVERTED: Keep text left-aligned as per user's preference */
+            justify-content: flex-start; /* Keep text left-aligned as per user's preference */
             gap: 0.5em;
             
             box-sizing: border-box; 
@@ -196,7 +196,7 @@
             background-image: url('./images/pixel-border.svg'); 
             background-repeat: no-repeat;
             background-size: 200% 120%; /* Keep this size as user wants it wider */
-            background-position: 30% center; /* ADJUSTED: Shift SVG to the left to align with content */
+            background-position: 10% center; /* ADJUSTED: Shift SVG further to the left */
             background-origin: border-box;
             background-clip: border-box; 
 
@@ -207,12 +207,10 @@
         /* Hover styles for the button (link) itself */
         .main-links a:hover,
         .main-links a:focus {
-            /* FIXED: Use invert(100%) for full inversion, remove explicit color/background */
             filter: invert(100%); 
-            
+            color: #fff; /* ADDED: Explicitly set text color to white on hover */
             opacity: 1;
             text-decoration: none;
-            /* Removed: background-color, color, text-shadow, --button-fill-color, filter: none */
         }
         .main-links .icon {
             display: inline-block;
@@ -227,11 +225,8 @@
             background-repeat: no-repeat;
             background-position: center;
             image-rendering: auto;
-            /* FIXED: Removed filter transition as parent handles it now */
             transition: background-image 0.15s; 
         }
-        /* REMOVED: .main-links a:hover .icon rule as filter on parent handles it */
-
         .main-links a.shop:hover .icon    { background-image: url("./images/toad shop.png"); }
         .main-links a.contact:hover .icon { background-image: url("./images/toad mail.png"); }
         .main-links a.about:hover .icon   { background-image: url("./images/toad about.png"); }
@@ -617,7 +612,7 @@
     .main-links a {
         display: flex;
         align-items: center;
-        justify-content: flex-start; /* REVERTED: Keep text left-aligned as per user's preference */
+        justify-content: flex-start; /* Keep text left-aligned as per user's preference */
         gap: 8px; /* Space between icon and text */
 
         font-size: 0.95rem;
@@ -628,13 +623,13 @@
         border: 1px solid transparent; /* ADDED: 1px transparent border for buffer */
         margin: 0 0 8px 0; /* Add bottom margin for spacing between buttons */
         text-decoration: none;
-        color: #181818; /* Default text color: Black */
+        color: #000; /* CHANGED: Set default text color to pure black */
 
         /* PIXELATED OVAL BACKGROUND */
         background-image: url('./images/pixel-border.svg');
         background-repeat: no-repeat;
         background-size: 200% 120%; /* Keep this size as user wants it wider */
-        background-position: 20% center; /* ADJUSTED: Shift SVG to the left for mobile */
+        background-position: 5% center; /* ADJUSTED: Shift SVG further to the left for mobile */
         background-origin: border-box;
         background-clip: border-box;
 
@@ -644,20 +639,17 @@
 
     /* Add this for mobile icon transition, if not inheriting correctly */
     .main-links .icon {
-        /* FIXED: Removed filter transition as parent handles it now */
         transition: background-image 0.15s; 
     }
 
     /* ADDED: Hover styles for mobile links */
     .main-links a:hover,
     .main-links a:focus {
-        /* FIXED: Use invert(100%) for full inversion, remove explicit color/background */
         filter: invert(100%); 
+        color: #fff; /* ADDED: Explicitly set text color to white on hover */
         opacity: 1;
         text-decoration: none;
     }
-
-    /* REMOVED: .main-links a:hover .icon rule as filter on parent handles it */
 
     /* ... rest of your mobile styles ... */
     .nav-hero-separator, .banner-hero-separator {
@@ -824,113 +816,6 @@
           />
         </svg>
       </div>
-    </section>
-    <section class="main-content hidden" id="mainContent">
-        <div style="max-width: 700px; margin: 0px auto 0 auto; padding: 20px;">
-            <h2>Gallery</h2>
-        </div>
-        <div class="gallery-grid">
-            <div class="gallery-item">
-                <a href="gallery/after-the-war.html">
-                    <img src="images/1 Joe Shenton - Respite.jpg" alt="Respite">
-                    <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">Respite</div>
-                        <div class="gallery-overlay-meta">Gouache on paper · 2022</div>
-                        <span class="gallery-overlay-view">View details</span>
-                    </div>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <a href="gallery/ptsd-machine.html">
-                    <img src="images/4 Joe Shenton - Reflection.jpg" alt="PTSD Machine">
-                    <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">PTSD Machine</div>
-                        <div class="gallery-overlay-meta">Acrylic on canvas · 2023</div>
-                        <span class="gallery-overlay-view">View details</span>
-                    </div>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <a href="gallery/transporter.html">
-                    <img src="images/2 Joe Shenton - Routine.jpg" alt="Transporter">
-                    <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">Transporter</div>
-                        <div class="gallery-overlay-meta">Digital illustration · 2021</div>
-                        <span class="gallery-overlay-view">View details</span>
-                    </div>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <a href="gallery/ramen-battleship.html">
-                    <img src="images/3 Joe Shenton - Reunion.jpg" alt="Ramen Battleship">
-                    <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">Ramen Battleship</div>
-                        <div class="gallery-overlay-meta">Watercolor · 2020</div>
-                        <span class="gallery-overlay-view">View details</span>
-                    </div>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <a href="gallery/walking-temple.html">
-                    <img src="images/walking temple website.jpg" alt="Quiet day at the beach. Cold, but beautiful">
-                    <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">Quiet day at the beach</div>
-                        <div class="gallery-overlay-meta">Digital painting · 2023</div>
-                        <span class="gallery-overlay-view">View details</span>
-                    </div>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <a href="gallery/demons.html">
-                    <img src="images/demons website.jpg" alt="Waiting for the bus in the desert">
-                    <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">Waiting for the bus in the desert</div>
-                        <div class="gallery-overlay-meta">Ink · 2022</div>
-                        <span class="gallery-overlay-view">View details</span>
-                    </div>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <a href="gallery/mountain.html">
-                    <img src="images/mountain website.jpg" alt="Nature again.. At its finest!">
-                    <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">Nature again.. At its finest!</div>
-                        <div class="gallery-overlay-meta">Acrylic · 2021</div>
-                        <span class="gallery-overlay-view">View details</span>
-                    </div>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <a href="gallery/osaka.html">
-                    <img src="images/osaka wesbite.jpg" alt="Canoeing again">
-                    <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">Canoeing again</div>
-                        <div class="gallery-overlay-meta">Gouache · 2022</div>
-                        <span class="gallery-overlay-view">View details</span>
-                    </div>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <a href="gallery/girl-train.html">
-                    <img src="images/fisherman website.jpg" alt="A girl, and a train passing">
-                    <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">A girl, and a train passing</div>
-                        <div class="gallery-overlay-meta">Mixed media · 2023</div>
-                        <span class="gallery-overlay-view">View details</span>
-                    </div>
-                </a>
-            </div>
-            <div class="gallery-item">
-                <a href="gallery/closegirl.html">
-                    <img src="images/wanderer website.jpg" alt="What a beautiful day!">
-                    <div class="gallery-overlay">
-                        <div class="gallery-overlay-title">What a beautiful day!</div>
-                        <div class="gallery-overlay-meta">Digital · 2022</div>
-                        <span class="gallery-overlay-view">View details</span>
-                    </div>
-                </a>
-            </div>
-        </div>
     </section>
     <div id="imgModal" class="modal" onclick="event.target === this && closeModal()">
         <div class="modal-content">
