--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         .main-links {
             display: flex;
             gap: 18px;
-            justify-content: flex-end;
+            justify-content: center;
             margin-top: 0;
             margin-bottom: 0;
             padding: 0;
@@ -188,7 +188,7 @@
             /* --- ADJUSTED LINE HERE: Increased horizontal padding --- */
             padding: 12px 80px; /* Double the previous 20px to make it twice as wide */
             
-            border-radius: 0; 
+            border-radius: 20; 
             border: 2px solid transparent; 
             margin: 0 0.1em;
 
@@ -197,7 +197,7 @@
             background-color: transparent; 
             background-image: url('./images/pixel-border.svg'); 
             background-repeat: no-repeat;
-            background-size: 150% 100%; /* SVG fills the entire button area */
+            background-size: 150% 130%; /* SVG fills the entire button area */
             background-origin: border-box;
             background-clip: border-box; 
         }
