--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: stretch;
 
         background-color: #FDEDF4;
         padding-bottom: 10px;
@@ -613,7 +613,7 @@
         gap: 8px;
 
         font-size: 0.95rem;
-        width: auto;
+        width: 100%;
         box-sizing: border-box;
         padding: 0.5em 1em;
         border-radius: 0px;
