--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #fff;
+            background: #A0B9D0;
             border-radius: 50%;
             padding: 18px;
             box-shadow: 0 2px 12px 0 rgba(0,0,0,0.04);
