--- a/index.html
+++ b/index.html
@@ -5,42 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=DotGothic16&display=swap" rel="stylesheet">
-   <style>
-    html, body {
-        margin: 0;
-        padding: 0;
-        /* ... existing html, body styles ... */
-        width: 100vw;
-        overflow-x: hidden;
-        /* ADDED: Padding to account for the fixed news banner */
-        padding-top: 40px; /* Adjust this value to match the exact height of your banner */
-    } /* <--- THIS CLOSING CURLY BRACE WAS MISSING! */
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            background: #FDEDF4;
+            color: #222;
+            font-family: 'Press Start 2P', 'DotGothic16', monospace;
+            width: 100vw;
+            overflow-x: hidden;
+        }
+        body { min-height: 100vh; }
 
-    body { min-height: 100vh; }
-
-    /* ADDED: News Banner Styles */
-    .news-banner {
-        background-color: #FFFFFF;
-        color: #181818;
-        padding: 10px 20px;
-        text-align: center;
-        width: 100vw;
-        box-sizing: border-box;
-        z-index: 100;
-        position: fixed;
-        top: 0;
-        left: 0;
-    }
-
-    .news-banner p {
-        font-family: 'Press Start 2P', monospace !important;
-        font-size: 1rem;
-        margin: 0;
-        line-height: 1.2;
-        letter-spacing: 0.04em;
-    }
-    /* END ADDED: News Banner Styles */
-       
         .hero-header {
             width: 100vw;
             display: flex;
@@ -64,7 +40,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #A0B9D0;
+            background: #fff;
             border-radius: 50%;
             padding: 18px;
             box-shadow: 0 2px 12px 0 rgba(0,0,0,0.04);
