--- a/index.html
+++ b/index.html
@@ -140,11 +140,20 @@
         .hero-nav-subtitle {
             font-family: 'DotGothic16', monospace !important;
             font-size: 3rem;
-            color: #000;
+            color: #fff;
             text-align: right; /* Current desktop alignment */
             margin-bottom: 18px;
             margin-top: -6px;
             letter-spacing: 0.04em;
+            text-shadow:
+                -2px -2px 0 #000,
+                2px -2px 0 #000,
+                -2px 2px 0 #000,
+                2px 2px 0 #000,
+                0px -2px 0 #000,
+                0px 2px 0 #000,
+                -2px 0px 0 #000,
+                2px 0px 0 #000;
             -webkit-text-stroke: 0;
             text-stroke: 0;
             font-weight: normal;
