--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         .solid-separator-bottom {
             width: 100vw;
             height: 15px; /* Adjust thickness as desired, e.g., 5px, 15px */
-            background-color: #181818; /* Black color from your button borders */
+            background-color: #FFFFFF; /* Black color from your button borders */
             margin: 20px 0; /* Add some space above and below the separator */
             box-sizing: border-box; /* Include padding and border in the element's total width and height */
         }
