--- a/index.html
+++ b/index.html
@@ -506,16 +506,16 @@
             margin-top: 8px;
             font-size: 1rem;
             /* Applying button-like styles here: */
-            background-color: #FFFFFF; /* White background */
-            color: #181818; /* Black text */
-            border: 4px solid #181818; /* Black border (similar to desktop nav links) */
-            padding: 8px 15px; /* Padding for the box */
-            border-radius: 0; /* Rectangular corners */
-            display: inline-block; /* Allow padding/border and fit content */
-            width: fit-content; /* Make the box fit its content */
-            margin-left: auto; /* For horizontal centering */
-            margin-right: auto; /* For horizontal centering */
-            box-sizing: border-box; /* Include padding/border in width */
+            background-color: #FFFFFF !important; /* White background */
+            color: #181818 !important; /* Black text */
+            border: 4px solid #181818 !important; /* Black border (similar to desktop nav links) */
+            padding: 8px 15px !important; /* Padding for the box */
+            border-radius: 0 !important; /* Rectangular corners */
+            display: inline-block !important; /* Allow padding/border and fit content */
+            width: fit-content !important; /* Make the box fit its content */
+            margin-left: auto !important; /* For horizontal centering */
+            margin-right: auto !important; /* For horizontal centering */
+            box-sizing: border-box !important; /* Include padding/border in width */
             /* End of new styles */
 
             font-family: 'Press Start 2P', cursive, monospace;
@@ -712,7 +712,6 @@
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
-        vertical-align: middle;
         background-image: url("./images/toad icon static.png");
     }
 
@@ -774,7 +773,7 @@
         border-radius: 0;
         
         /* APPLY THE WHITE BORDER HERE (to the container) */
-        border: 15px solid #FFFFFF; /* Your white border: 5 pixels thick, solid, white */
+        border: 10px solid #FFFFFF; 
         /* Crucial: border is included *within* the 100vw width/height of the container */
         box-sizing: border-box; 
 
@@ -800,16 +799,15 @@
         border: none; /* Make sure no border is on the image itself */
         box-sizing: content-box; /* Revert to default for image */
 
-        /* IMPORTANT: Do NOT set transform: none; here. This keeps the global transform: scale(1.3); for "zoomed in" effect */
-        /* If you want a specific zoom, set it here, e.g., transform: scale(1.3); */
-        /* If the global transform is not active, add transform: scale(1.3); here */
-        /* Example: transform: scale(1.3); */
+        /* IMPORTANT: Do NOT set transform: none; here. This allows the global transform: scale(1.3); to apply for the "zoomed in" effect */
+        /* If you want a specific zoom, you can explicitly set it here, e.g., transform: scale(1.3); */
 
         margin: 0;
         border-radius: 0;
         max-width: none;
     }
     /* END MODIFICATIONS for banner and separators */
+
     .hero-image-row {
         flex-direction: column !important;
         width: 100vw;
